--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"framer-motion": "^6.2.8",
 		"react": "^18.0.0",
 		"react-dom": "^18.0.0",
+		"react-phone-number-input": "^3.1.49",
 		"react-router-dom": "^6.2.2",
 		"react-scripts": "5.0.0"
 	},
